--- a/resources/views/Contact.html
+++ b/resources/views/Contact.html
@@ -8,6 +8,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+  <script src="./index.js"></script>
 
   <link rel="stylesheet" href="../css/Rec.css">
   <style>
@@ -18,13 +20,13 @@
     <a href="" class="logo"><img src="http://vetlinkltd.com/wp-content/themes/vetlink/assets/images/logo.png" alt=""></span></a>
     </div>
     <ul class="navigation">
-    <li class="flash-tatic"><a href="index.html">Home</a></li>
+    <li class="flash-tatic"><a href="#home">Home</a></li>
     <li class="flash-tatic"><a href="#about">Product</a></li>
-    <li class="flash-tatic"><a href="new.html">New</a></li>
-    <li class="flash-tatic"><a href="Recruitment.html">Recruitment</a></li>
+    <li class="flash-tatic"><a href="#contact">New</a></li>
+    <li class="flash-tatic"><a href="#menu">Recruitment</a></li>
     <li class="flash-tatic"><a href="#expert">Contact</a></li>
     <li class="flash-tatic"><a href="#expert">Introduction</a></li>
-    <li class="flash-tatic"><i class="search"></i></li>
+    <li class="flash-tatic"><i class="fa fa-search"></i></li>
     </ul>
     </header>
 <body>
@@ -48,7 +50,7 @@
         </table>
       </div>
       </div>
-  
+   
       <br>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
