--- a/resources/views/new.html
+++ b/resources/views/new.html
@@ -17,10 +17,10 @@
     <a href="" class="logo"><img src="http://vetlinkltd.com/wp-content/themes/vetlink/assets/images/logo.png" alt=""></span></a>
     </div>
     <ul class="navigation">
-    <li class="flash-tatic"><a href="#home">Home</a></li>
+    <li class="flash-tatic"><a href="index.html">Home</a></li>
     <li class="flash-tatic"><a href="#about">Product</a></li>
-    <li class="flash-tatic"><a href="#contact">New</a></li>
-    <li class="flash-tatic"><a href="#menu">Recruitment</a></li>
+    <li class="flash-tatic"><a href="new.html">New</a></li>
+    <li class="flash-tatic"><a href="Recruitment.html">Recruitment</a></li>
     <li class="flash-tatic"><a href="#expert">Contact</a></li>
     <li class="flash-tatic"><a href="#expert">Introduction</a></li>
     <li class="flash-tatic"><i class="fa fa-search"></i></li>
